<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#191F36"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="487dp"
        android:background="#4AA7CAC0"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:id="@+id/facility_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Facility Name"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:hint="Facility Name"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/start_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0A4753"
        android:text="Select Start Time" />

    <Button
        android:id="@+id/end_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0A4753"
        android:text="Select End Time" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Location"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/location_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:hint="Location"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/white" />
    <TextView
        android:id="@+id/email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:hint="Contact Email"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#0A4754"
        android:text="Save Facility" />

    <Button
        android:id="@+id/remove_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Remove Facility"
        android:visibility="gone" />
    </LinearLayout>

</LinearLayout>