...
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<SearchView
        android:id="@+id/entrants_search_view"
        android:layout_width="379dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:queryHint="Search Entrants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ev_entrants_lv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/admin_pro_search_view"
        app:layout_constraintBottom_toBottomOf="parent"
...
