...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191F36">

    <Button
        android:id="@+id/admin_v_pro"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginBottom="224dp"
        android:backgroundTint="#355050"
        android:text="Profiles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_v_fac"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/admin_v_fac"
        android:layout_width="132dp"
        android:layout_height="48dp"
...
