...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191F36">

    <!--<SearchView
        android:id="@+id/fsearchView"
        android:layout_width="362dp"
        android:layout_height="47dp"
        android:tooltipText="Search Facilities"
        app:layout_constraintEnd_toEndOf="parent"
        android:queryHint="Search Facilities"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintTop_toBottomOf="parent">


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/admin_fac_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/admin_fac_search_view"
        app:layout_constraintBottom_toBottomOf="parent"
...
