<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#2E394E"
    android:orientation="vertical"
    android:padding="6dp"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="9dp"
    android:layout_marginStart="9dp">

    <TextView
        android:id="@+id/facility_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  Facility Name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/facility_loc"
        android:layout_width="311dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="  Location details"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facility_name"
        android:layout_marginBottom="1dp"/>
</LinearLayout>
